force-app/src/objects/CTCM__Vendor_Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>CTCM__AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendor Bank Accounts</relationshipLabel>
        <relationshipName>Vendor_Bank_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__ClearingMemberID__c</fullName>
        <inlineHelpText>Bank identifier in (numeric format), for more details, see: https://www.ibm.com/support/knowledgecenter/SSRH46_3.0.0/fxhmapr2018clrcodes.html</inlineHelpText>
        <label>Clearing Member ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__ClearingMemberName__c</fullName>
        <label>Clearing Member Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__CountryCode__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CTCM__Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CTCM__IBANNumber__c</fullName>
        <label>IBAN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__PaymentSystemPrefix__c</fullName>
        <inlineHelpText>The country&apos;s payment system prefix (5 characters). E.g. &quot;ATBLZ&quot;, &quot;USABA&quot; or &quot;CACPA&quot;. See for more details: https://www.sepaforcorporates.com/swift-for-corporates/list-ncc-national-clearing-codes/</inlineHelpText>
        <label>Payment System Prefix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__SWIFTNumber__c</fullName>
        <label>SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Vendor Bank Account</label>
    <nameField>
        <label>Vendor Bank Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>